--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>網站</title>
   </head>
   <body>
-    <ul>
-      <li>你的環境和自我遺傳</li>
-      <li>自我暗示</li>
-      <li>自我暗示的心理學</li>
-      <li>回報定律</li>
-      <li>心智的力量</li>
-      <li>如何建立自信</li>
-      <li>如何建立</li>
-    </ul>
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="LSSQFFMCRLH7W">
+<table>
+<tr><td><input type="hidden" name="on0" value="贊助我">贊助我</td></tr><tr><td><select name="os0">
   </body>
 </html>
