--- a/index.html
+++ b/index.html
@@ -5,20 +5,28 @@
     <title>網站</title>
   </head>
   <body>
-  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="LSSQFFMCRLH7W">
-<table>
-<tr><td><input type="hidden" name="on0" value="贊助我">贊助我</td></tr><tr><td><select name="os0">
-	<option value="請我吃飯">請我吃飯 NT$100 TWD</option>
-	<option value="請我搭計程車">請我搭計程車 NT$500 TWD</option>
-	<option value="幫助我成長">幫助我成長 NT$1,200 TWD</option>
-</select> </td></tr>
-</table>
-<input type="hidden" name="currency_code" value="TWD">
-<input type="image" src="https://www.paypalobjects.com/zh_TW/TW/i/btn/btn_paynowCC_LG.gif" border="0" name="submit" alt="PayPal － 更安全、更簡單的線上付款方式！">
-<img alt="" border="0" src="https://www.paypalobjects.com/zh_TW/i/scr/pixel.gif" width="1" height="1">
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+  <input type="hidden" name="cmd" value="_s-xclick">
+  <input type="hidden" name="hosted_button_id" value="BF6SYUCC3TWGG">
+  <table>
+    <tr>
+      <td>
+        <input type="hidden" name="on0" value="贊助我">贊助我</td>
+    </tr>
+    <tr>
+      <td>
+        <select name="os0">
+          <option value="請我吃飯">請我吃飯 NT$100 TWD</option>
+          <option value="請我搭計程車">請我搭計程車 NT$500 TWD</option>
+          <option value="請我吃飽飽搭計程車">請我吃飽飽搭計程車 NT$1,000 TWD</option>
+        </select>
+      </td>
+    </tr>
+  </table>
+  <input type="hidden" name="currency_code" value="TWD">
+  <input type="image" src="https://www.paypalobjects.com/zh_TW/TW/i/btn/btn_buynowCC_LG_wCUP.gif" border="0" name="submit"
+    alt="PayPal － 更安全、更簡單的線上付款方式！">
+  <img alt="" border="0" src="https://www.paypalobjects.com/zh_TW/i/scr/pixel.gif" width="1" height="1">
 </form>
-
   </body>
 </html>
